apps/staging/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-route
  namespace: podinfo
spec:
  parentRefs:
  - name: istari-gateway
    namespace: kube-system
  hostnames:
  - "podinfo.istari.benjaminmnoer.dk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: podinfo
      port: 9898
      namespace: podinfo
